why u no commit

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 			document.body.appendChild(renderer.domElement);
 
 			var geometry = new THREE.CubeGeometry(1,1,1);
-			var material = new THREE.MeshBasicMaterial({color: 0x00ff00});
+			var texture = new THREE.ImageUtils.loadTexture('images/threes-company.jpg');
+			var material = new THREE.MeshBasicMaterial({ map : texture });
 			var cube = new THREE.Mesh(geometry, material);
 			scene.add(cube);
 
