--- a/index.html
+++ b/index.html
@@ -1,39 +1,104 @@
 <html>
 	<head>
 		<title>My first Three.js app</title>
+		<link rel="stylesheet" href="css/styles.css">
 		<style>
 			html, body {padding: 0; margin: 0;}
-			canvas { width: 100%; height: 100% }
+			canvas { width: 100%; height: 90% }
 		</style>
 	</head>
 	<body>
 		<script src="js/three.min.js"></script>
+		<script src="js/OrbitControls.js"></script>
 		<script>
+
+		      // camera
+      // camera.position.z = 500;
+
 			var scene = new THREE.Scene();
-			var camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 1000);
+			// var camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 1000);
+  			var camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 1, 1000);
 
 			var renderer = new THREE.WebGLRenderer();
 			renderer.setSize(window.innerWidth, window.innerHeight);
 			document.body.appendChild(renderer.domElement);
 
-			var geometry = new THREE.CubeGeometry(1,1,1);
+			// parent
+			var parent = new THREE.Object3D();
+			scene.add( parent );
+
+			var boxWidth, boxHeight, boxDepth, boxWidthSegments, boxHeightSegments, boxDepthSegments;
+			var boxDims = {
+				'boxWidth' 	: 80,
+				'boxHeight' : 80,
+				'boxDepth' 	: 80,
+				'boxWidthSegs' 	: 4,
+				'boxHeightSegs' : 4,
+				'boxDepthSegs' 	: 4
+			};
+			// how to push array value as arguments
+			var geometry = new THREE.BoxGeometry(boxDims["boxWidth"], boxDims["boxHeight"], boxDims["boxDepth"], boxDims["boxWidthSegs"], boxDims["boxHeightSegs"], boxDims["boxDepthSegs"] );
 			var texture = new THREE.ImageUtils.loadTexture('images/threes-company.jpg');
 			var material = new THREE.MeshBasicMaterial({ map : texture });
 			var cube = new THREE.Mesh(geometry, material);
 			scene.add(cube);
 
-			camera.position.z = 5;
+			// sphere = THREE.Mexh(new THREE.SphereGeometry(radius, segmentsWidth, segmentsHeight))
+			var sphereDims = {
+				'radius' 	: 20,
+				'segWidth'	: 20,
+				'segHeight'	: 20
+			}
+			var sphere = new THREE.Mesh(
+				// geometry
+				new THREE.SphereGeometry(20, 20, 20), 
+				// material
+				new THREE.MeshNormalMaterial()
+			);
+			sphere.overdraw = true;
+			sphere.translateX(boxDims["boxDepth"] + boxDims["boxDepth"] / 2 + 5);
+			sphere.translateY(boxDims["boxWidth"] * 2  );
+			
+			/* Pivots */
+			var pivot1 = new THREE.Object3D();
+			pivot1.rotation.z = 0;
 
+			
+			parent.add( pivot1 );
+			
+			// sphere.position.y = 5;
+			sphere.position.y = 20;
+
+			pivot1.add(sphere);
+			scene.add(parent);
+
+			// 'better' window scaling 
+			window.addEventListener('resize', function() {
+			  var WIDTH = window.innerWidth,
+			      HEIGHT = window.innerHeight;
+			  renderer.setSize(WIDTH, HEIGHT);
+			  camera.aspect = WIDTH / HEIGHT;
+
+			  camera.updateProjectionMatrix();
+			});
+
+			camera.position.z = 500;
+
+			
 			var render = function () {
-				requestAnimationFrame(render);
+
+				requestAnimationFrame(render );
 
 				cube.rotation.x += 0.01;
 				cube.rotation.y += 0.01;
-
+				sphere.rotation.y += 0.001;
+				sphere.rotation.x += 0.002;
+				parent.rotation.z += 0.01;
 				renderer.render(scene, camera);
 			};
 
 			render();
 		</script>
+		<p>I get to be Janet.</p>
 	</body>
 </html>
